--- a/LuggageTrackerTool2/src/view/RegistrationLuggage.form
+++ b/LuggageTrackerTool2/src/view/RegistrationLuggage.form
@@ -39,12 +39,10 @@
                   <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
                   <Component id="DESCRIPTION" min="-2" max="-2" attributes="0"/>
                   <Component id="LUGGAGEID_LABEL" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
                   <Component id="ANDERS" alignment="0" min="-2" pref="41" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="PRINT_BUTTON" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="SUBMIT_BUTTON" min="-2" max="-2" attributes="0"/>
                   <Component id="STATUS_COMBOBOX" min="-2" max="-2" attributes="0"/>
@@ -89,13 +87,8 @@
                   <Component id="STATUS_COMBOBOX" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PRINT_BUTTON" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="SUBMIT_BUTTON" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <Component id="SUBMIT_BUTTON" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="19" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -142,12 +135,6 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="STORAGE_LOCATION_INPUTActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="PRINT_ON_REGISTER_INPUT">
-      <Properties>
-        <Property name="selected" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" value="Print on register"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="ANDERS">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -175,11 +162,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="PRINT_BUTTON">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Print"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JButton" name="SUBMIT_BUTTON">
       <Properties>
         <Property name="text" type="java.lang.String" value="Submit"/>
