--- a/LuggageTrackerTool2/src/view/RegistrationPassenger.form
+++ b/LuggageTrackerTool2/src/view/RegistrationPassenger.form
@@ -59,8 +59,6 @@
                                                   <Component id="TEMP_POSTAL_CODE" min="-2" max="-2" attributes="0"/>
                                                   <Component id="HOME_PHONE_NUMBER" min="-2" max="-2" attributes="0"/>
                                                   <Component id="MOBILE_PHONE_NUMBER" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="PRINT_ON_REGISTER" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                  <Component id="PRINT" alignment="0" min="-2" max="-2" attributes="0"/>
                                                   <Component id="SURNAME" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
@@ -97,7 +95,6 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
@@ -113,6 +110,7 @@
                                   <Component id="TEMP_CITY_INPUT" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
+                          <Component id="PRINT" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
                           <EmptySpace min="-2" pref="188" max="-2" attributes="0"/>
@@ -227,17 +225,12 @@
                   <Component id="TEMP_POSTAL_CODE" min="-2" max="-2" attributes="0"/>
                   <Component id="TEMP_POSTAL_CODE_INPUT" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="PAIR_PASSENGER_LUGGAGE" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PRINT_ON_REGISTER" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PAIR_PASSENGER_LUGGAGE" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PRINT" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="REGISTER" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="PRINT" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="REGISTER" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -329,11 +322,40 @@
     <Component class="javax.swing.JComboBox" name="HOME_COUNTRY_INPUT">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="33">
             <StringItem index="0" value="Please select your country .."/>
-            <StringItem index="1" value="The Netherlands"/>
-            <StringItem index="2" value="Germany"/>
-            <StringItem index="3" value="Belgium"/>
+            <StringItem index="1" value="Belgium"/>
+            <StringItem index="2" value="Albania"/>
+            <StringItem index="3" value="Bosnia &amp; Herzegovina"/>
+            <StringItem index="4" value="Bulgaria"/>
+            <StringItem index="5" value="Croatia"/>
+            <StringItem index="6" value="Cyprus"/>
+            <StringItem index="7" value="Czech Republic"/>
+            <StringItem index="8" value="Denmark"/>
+            <StringItem index="9" value="Estonia"/>
+            <StringItem index="10" value="Finland"/>
+            <StringItem index="11" value="France"/>
+            <StringItem index="12" value="Georgia"/>
+            <StringItem index="13" value="Germany"/>
+            <StringItem index="14" value="Greece"/>
+            <StringItem index="15" value="Hungary"/>
+            <StringItem index="16" value="Ireland"/>
+            <StringItem index="17" value="Italy"/>
+            <StringItem index="18" value="The Netherlands"/>
+            <StringItem index="19" value="Norway"/>
+            <StringItem index="20" value="Poland"/>
+            <StringItem index="21" value="Portugal"/>
+            <StringItem index="22" value="Russia"/>
+            <StringItem index="23" value="San Marino"/>
+            <StringItem index="24" value="Serbia"/>
+            <StringItem index="25" value="Slovakia"/>
+            <StringItem index="26" value="Slovenia"/>
+            <StringItem index="27" value="Spain"/>
+            <StringItem index="28" value="Sweden"/>
+            <StringItem index="29" value="Switzerland"/>
+            <StringItem index="30" value="Turkey"/>
+            <StringItem index="31" value="Ukraine"/>
+            <StringItem index="32" value="United Kingdom"/>
           </StringArray>
         </Property>
       </Properties>
@@ -378,17 +400,49 @@
     <Component class="javax.swing.JComboBox" name="TEMP_COUNTRY_INPUT">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="33">
             <StringItem index="0" value="Please select your country .."/>
-            <StringItem index="1" value="The Netherlands"/>
-            <StringItem index="2" value="Germany"/>
-            <StringItem index="3" value="Belgium"/>
+            <StringItem index="1" value="Belgium"/>
+            <StringItem index="2" value="Albania"/>
+            <StringItem index="3" value="Bosnia &amp; Herzegovina"/>
+            <StringItem index="4" value="Bulgaria"/>
+            <StringItem index="5" value="Croatia"/>
+            <StringItem index="6" value="Cyprus"/>
+            <StringItem index="7" value="Czech Republic"/>
+            <StringItem index="8" value="Denmark"/>
+            <StringItem index="9" value="Estonia"/>
+            <StringItem index="10" value="Finland"/>
+            <StringItem index="11" value="France"/>
+            <StringItem index="12" value="Georgia"/>
+            <StringItem index="13" value="Germany"/>
+            <StringItem index="14" value="Greece"/>
+            <StringItem index="15" value="Hungary"/>
+            <StringItem index="16" value="Ireland"/>
+            <StringItem index="17" value="Italy"/>
+            <StringItem index="18" value="The Netherlands"/>
+            <StringItem index="19" value="Norway"/>
+            <StringItem index="20" value="Poland"/>
+            <StringItem index="21" value="Portugal"/>
+            <StringItem index="22" value="Russia"/>
+            <StringItem index="23" value="San Marino"/>
+            <StringItem index="24" value="Serbia"/>
+            <StringItem index="25" value="Slovakia"/>
+            <StringItem index="26" value="Slovenia"/>
+            <StringItem index="27" value="Spain"/>
+            <StringItem index="28" value="Sweden"/>
+            <StringItem index="29" value="Switzerland"/>
+            <StringItem index="30" value="Turkey"/>
+            <StringItem index="31" value="Ukraine"/>
+            <StringItem index="32" value="United Kingdom"/>
           </StringArray>
         </Property>
       </Properties>
       <BindingProperties>
         <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_COUNTRY_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
       </BindingProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TEMP_COUNTRY_INPUTActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="TEMP_CITY">
       <Properties>
@@ -420,20 +474,6 @@
         <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_POSTAL_CODE_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
       </BindingProperties>
     </Component>
-    <Component class="javax.swing.JLabel" name="ADDITIONAL_OPTIONS_TITLE">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="13" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Additional Options"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="PRINT_ON_REGISTER">
-      <Properties>
-        <Property name="selected" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" value="Print on register"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JCheckBox" name="PAIR_PASSENGER_LUGGAGE">
       <Properties>
         <Property name="selected" type="boolean" value="true"/>
@@ -444,6 +484,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Print"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PRINTActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="REGISTER">
       <Properties>
