--- a/LuggageTrackerTool2/src/view/AccountManagement.form
+++ b/LuggageTrackerTool2/src/view/AccountManagement.form
@@ -81,11 +81,7 @@
                           </Group>
                       </Group>
                   </Group>
-<<<<<<< HEAD
                   <EmptySpace pref="123" max="32767" attributes="0"/>
-=======
-                  <EmptySpace pref="191" max="32767" attributes="0"/>
->>>>>>> origin/PrintZooi
               </Group>
           </Group>
         </DimensionLayout>
@@ -239,13 +235,15 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.DefaultComboBoxModel(usernames)" type="code"/>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="User 1"/>
+                <StringItem index="1" value="User 2"/>
+                <StringItem index="2" value="User 3"/>
+                <StringItem index="3" value="User 4"/>
+              </StringArray>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox1ActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
