--- a/LuggageTrackerTool2/src/view/EditPanel.form
+++ b/LuggageTrackerTool2/src/view/EditPanel.form
@@ -349,11 +349,40 @@
     <Component class="javax.swing.JComboBox" name="HOME_COUNTRY_INPUT">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="33">
             <StringItem index="0" value="Please select your country .."/>
-            <StringItem index="1" value="The Netherlands"/>
-            <StringItem index="2" value="Germany"/>
-            <StringItem index="3" value="Belgium"/>
+            <StringItem index="1" value="Belgium"/>
+            <StringItem index="2" value="Albania"/>
+            <StringItem index="3" value="Bosnia &amp; Herzegovina"/>
+            <StringItem index="4" value="Bulgaria"/>
+            <StringItem index="5" value="Croatia"/>
+            <StringItem index="6" value="Cyprus"/>
+            <StringItem index="7" value="Czech Republic"/>
+            <StringItem index="8" value="Denmark"/>
+            <StringItem index="9" value="Estonia"/>
+            <StringItem index="10" value="Finland"/>
+            <StringItem index="11" value="France"/>
+            <StringItem index="12" value="Georgia"/>
+            <StringItem index="13" value="Germany"/>
+            <StringItem index="14" value="Greece"/>
+            <StringItem index="15" value="Hungary"/>
+            <StringItem index="16" value="Ireland"/>
+            <StringItem index="17" value="Italy"/>
+            <StringItem index="18" value="The Netherlands"/>
+            <StringItem index="19" value="Norway"/>
+            <StringItem index="20" value="Poland"/>
+            <StringItem index="21" value="Portugal"/>
+            <StringItem index="22" value="Russia"/>
+            <StringItem index="23" value="San Marino"/>
+            <StringItem index="24" value="Serbia"/>
+            <StringItem index="25" value="Slovakia"/>
+            <StringItem index="26" value="Slovenia"/>
+            <StringItem index="27" value="Spain"/>
+            <StringItem index="28" value="Sweden"/>
+            <StringItem index="29" value="Switzerland"/>
+            <StringItem index="30" value="Turkey"/>
+            <StringItem index="31" value="Ukraine"/>
+            <StringItem index="32" value="United Kingdom"/>
           </StringArray>
         </Property>
       </Properties>
@@ -370,11 +399,40 @@
     <Component class="javax.swing.JComboBox" name="TEMP_COUNTRY_INPUT">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="33">
             <StringItem index="0" value="Please select your country .."/>
-            <StringItem index="1" value="The Netherlands"/>
-            <StringItem index="2" value="Germany"/>
-            <StringItem index="3" value="Belgium"/>
+            <StringItem index="1" value="Belgium"/>
+            <StringItem index="2" value="Albania"/>
+            <StringItem index="3" value="Bosnia &amp; Herzegovina"/>
+            <StringItem index="4" value="Bulgaria"/>
+            <StringItem index="5" value="Croatia"/>
+            <StringItem index="6" value="Cyprus"/>
+            <StringItem index="7" value="Czech Republic"/>
+            <StringItem index="8" value="Denmark"/>
+            <StringItem index="9" value="Estonia"/>
+            <StringItem index="10" value="Finland"/>
+            <StringItem index="11" value="France"/>
+            <StringItem index="12" value="Georgia"/>
+            <StringItem index="13" value="Germany"/>
+            <StringItem index="14" value="Greece"/>
+            <StringItem index="15" value="Hungary"/>
+            <StringItem index="16" value="Ireland"/>
+            <StringItem index="17" value="Italy"/>
+            <StringItem index="18" value="The Netherlands"/>
+            <StringItem index="19" value="Norway"/>
+            <StringItem index="20" value="Poland"/>
+            <StringItem index="21" value="Portugal"/>
+            <StringItem index="22" value="Russia"/>
+            <StringItem index="23" value="San Marino"/>
+            <StringItem index="24" value="Serbia"/>
+            <StringItem index="25" value="Slovakia"/>
+            <StringItem index="26" value="Slovenia"/>
+            <StringItem index="27" value="Spain"/>
+            <StringItem index="28" value="Sweden"/>
+            <StringItem index="29" value="Switzerland"/>
+            <StringItem index="30" value="Turkey"/>
+            <StringItem index="31" value="Ukraine"/>
+            <StringItem index="32" value="United Kingdom"/>
           </StringArray>
         </Property>
       </Properties>
