--- a/LuggageTrackerTool2/src/view/ManagerMenu.form
+++ b/LuggageTrackerTool2/src/view/ManagerMenu.form
@@ -110,6 +110,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Confirm"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CONFIRM_BUTTONActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
